Added styles to Introduction Section

--- a/index.html
+++ b/index.html
@@ -43,8 +43,10 @@
         <!-- End of Hero section -->
         
         <section class="introduction">
-            <h2>A creative portfolio template</h2>
-            <p>Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id tempor ipsum. Fusce at massa ac nunc porta fringilla sed eget neque. Quisque quis pretium nulla. Fusce eget bibendum neque, vel volutpat augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            <div class="introduction__container">
+                <h2>A creative portfolio template</h2>
+                <p>Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent id tempor ipsum. Fusce at massa ac nunc porta fringilla sed eget neque. Quisque quis pretium nulla. Fusce eget bibendum neque, vel volutpat augue. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Interdum et malesuada fames ac ante ipsum primis in faucibus.</p>
+            </div>
         </section>
         <!-- End of Introduction section -->
         
@@ -55,7 +57,7 @@
                     <div class="features__card-icon">
                         <i class="fas fa-laptop"></i>
                     </div>
-                    <h2>Digital design</h2>
+                    <h3>Digital design</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                     </p>
@@ -64,7 +66,7 @@
                     <div class="features__card-icon">
                         <i class="fas fa-laptop"></i>
                     </div>
-                    <h2>Digital design</h2>
+                    <h3>Digital design</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                     </p>
@@ -73,7 +75,7 @@
                     <div class="features__card-icon">
                         <i class="fas fa-code"></i>
                     </div>
-                    <h2>Web development</h2>
+                    <h3>Web development</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                     </p>
@@ -82,7 +84,7 @@
                     <div class="features__card-icon">
                         <i class="fas fa-heart"></i>
                     </div>
-                    <h2>Creative direction</h2>
+                    <h3>Creative direction</h3>
                     <p>
                         Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
                     </p>
