Added styles to Feature section

--- a/index.html
+++ b/index.html
@@ -53,41 +53,34 @@
         <section class="features">
             <div class="features__container">
                 <h2>Love what you do, and you'll do it well</h2>
-                <div class="features__card">
-                    <div class="features__card-icon">
-                        <i class="fas fa-laptop"></i>
+                <div class="features__cards-container">
+                    <div class="features__card">
+                        <div class="features__card-icon">
+                            <i class="fas fa-laptop"></i>
+                        </div>
+                        <h3>Digital design</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                        </p>
                     </div>
-                    <h3>Digital design</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                    </p>
-                </div>
-                <div class="features__card">
-                    <div class="features__card-icon">
-                        <i class="fas fa-laptop"></i>
+                    <div class="features__card">
+                        <div class="features__card-icon">
+                            <i class="fas fa-code"></i>
+                        </div>
+                        <h3>Web development</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                        </p>
                     </div>
-                    <h3>Digital design</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                    </p>
-                </div>
-                <div class="features__card">
-                    <div class="features__card-icon">
-                        <i class="fas fa-code"></i>
+                    <div class="features__card">
+                        <div class="features__card-icon">
+                            <i class="fas fa-heart"></i>
+                        </div>
+                        <h3>Creative direction</h3>
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
+                        </p>
                     </div>
-                    <h3>Web development</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                    </p>
-                </div>
-                <div class="features__card">
-                    <div class="features__card-icon">
-                        <i class="fas fa-heart"></i>
-                    </div>
-                    <h3>Creative direction</h3>
-                    <p>
-                        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sed a lorem quis neque interdum consequat ut sed sem. Duis quis tempor nunc. Interdum et malesuada fames ac ante ipsum primis in faucibus.
-                    </p>
                 </div>
             </div>
         </section>
