Added styles to Portfolio section

--- a/index.html
+++ b/index.html
@@ -141,17 +141,35 @@
         <section class="portfolio">
             <div class="portfolio__cards">
                 <div class="portfolio__cards-card">
-                    <img src="./img/portfolio-01.jpg" alt="portfolio01">
+                    <div class="portfolio__cards-img">
+                        <img src="./img/portfolio-01.jpg" alt="portfolio01">
+                        <div class="portfolio__cards-img-overlay">
+                            <i class="fas fa-search"></i><br>
+                            <span>view more</span>
+                        </div>
+                    </div>
                     <h3>Creative minds</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                 </div>
                 <div class="portfolio__cards-card">
-                    <img src="./img/portfolio-02.jpg" alt="portfolio02">
+                    <div class="portfolio__cards-img">
+                        <img src="./img/portfolio-02.jpg" alt="portfolio02">
+                        <div class="portfolio__cards-img-overlay">
+                            <i class="fas fa-search"></i><br>
+                            <span>view more</span>
+                        </div>
+                    </div>
                     <h3>Creative earts</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                 </div>
                 <div class="portfolio__cards-card">
-                    <img src="./img/portfolio-03.jpg" alt="portfolio03">
+                    <div class="portfolio__cards-img">
+                        <img src="./img/portfolio-03.jpg" alt="portfolio03">
+                        <div class="portfolio__cards-img-overlay">
+                            <i class="fas fa-search"></i><br>
+                            <span>view more</span>
+                        </div>
+                    </div>
                     <h3>Creative ideas</h3>
                     <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nunc ultricies nulla non metus pulvinar imperdiet. Praesent non adipiscing libero.</p>
                 </div>
